finalizei o projeto das redes sociais

--- a/facebook.html
+++ b/facebook.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/social.css">
 </head>
 <body>
-    <img src="imagens/tela-facebook.jpg" alt="Facebook">
-    <a href="https://pt-br.facebook.com/">ACESSE</a>
+    <img src="imagens/tela-facebook-proprio.jpg" alt="Facebook">
+    <a href="https://www.facebook.com/fabio.dejesusxavier.9/" target="_blank">ACESSE</a>
 </body>
 </html>
