--- a/github.html
+++ b/github.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/social.css">
 </head>
 <body>
-    <img src="imagens/tela-github.jpg" alt="GitHub">
-    <a href="https://github.com/gustavoguanabara/" target="_blank">ACESSE</a>
+    <img src="imagens/tela-github-pessoal.jpg" alt="GitHub">
+    <a href="https://github.com/Binhozero11" target="_blank">ACESSE</a>
 </body>
 </html>
