--- a/instagram.html
+++ b/instagram.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/social.css">
 </head>
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="Instagram">
-    <a href="https://www.instagram.com/gustavoguanabara/" target="_blank">ACESSE</a>
+    <img src="imagens/tela-instagram-proprio.jpg" alt="Instagram">
+    <a href="https://www.instagram.com/fabio_j.xavier/" target="_blank">ACESSE</a>
 </body>
 </html>
